styles.css
/* Set Inter font as specified in https://rsms.me/inter/inter.css */
:root { 
  font-family: 'Inter', sans-serif;
}
@supports (font-variation-settings: normal) {
  :root { font-family: 'Inter var', sans-serif; }
}

/* Set CSS variables for document */
:root {
  --violet-200: #ddd6fe;
  --violet-500: #8b5cf6;
  --zinc-200: #e4e4e7;
  --zinc-400: #a1a1aa;
  --zinc-700: #3f3f46;
  --zinc-800: #27272a;
  --zinc-900: #18181b; 
}

/* Utility CSS Classes */
.bold-500 {
  font-weight: 500;
}

.bold-650 {
  font-weight: 650;
}

.zinc-200 {
  color: var(--zinc-200);
}

.violet-200 {
  color: var(--violet-200);
}

.violet-500 {
  color: var(--violet-500);
}

.zinc-400 {
  color: var(--zinc-400);
}

.zinc-700 {
  color: var(--zinc-700);
}

.red-yellow-bg {
  background-image: (120deg, #fa8484 0%, #f4e28f 100%);
}

.button {
  color: #fafafa;
  background-color: #6d28d9;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  padding: calc(0.5em - 1px) 1em;
  text-align: center;
  white-space: nowrap;
  align-items: center;
  box-shadow: none;
  display: inline-flex;
  font-size: 1rem;
  height: 2.5em;
  position: relative;
  vertical-align: top;
}

.content-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  box-sizing: border-box;
  min-height: 100vh;
  padding: 5.25rem 0.75rem 2rem 0.75rem;
}

.gradient-underline {
  background-image: linear-gradient(120deg, #a78bfa 0%, #2dd4bf 100%);
  background-repeat: no-repeat;
  background-size: 100% 0.2em;
  background-position: 0 88%;
}

.card {
  border-radius: 6px;
  box-shadow: rgba(10, 10, 10, 0.1) 0px 0.5em 1em -0.125em, rgba(10, 10, 10, 0.02) 0px 0px 0px 1px;
}

.small-icon {
  width: 1.2rem;
  height: 1.2rem;
}

.medium-icon {
  width: 2rem;
  height: 2rem;
}

.large-icon {
  width: 3rem;
  height: 3rem;
}

.content-header {
  text-align: center;
  margin-bottom: 2rem;
}

.section-image {
  width: 150px;
  height: auto;
}

/* General styling for webpage and various sections */
html {
  font-size: 16px;
  scroll-behavior: smooth;
  -webkit-font-smoothing: antialiased;
  height: 100%;
}

body {
  color: var(--zinc-800);
  font-weight: 400;
  letter-spacing: -0.004em;
  height: 100%;
}

a {
  color: inherit;
  text-decoration: inherit;
}

h1, h2, h3, h4, h5, h6 {
  color: var(--zinc-900);
}

h1 {
  font-weight: 750;
  font-size: 2.5rem;
  letter-spacing: -0.055em;
}

h2 {
  font-weight: 700;
  font-size: 1.75rem;
  letter-spacing: -0.055em;
  margin-bottom: 1rem;
  text-align: center;
}

h3 {
  font-weight: 650;
  font-size: 1.2rem;
  letter-spacing: -0.018em;
}

svg {
  fill: var(--violet-200);
}

/* Navbar styling */
.navbar {
  width: 100%;
  position: fixed;
  min-height: 3.25rem;
  background-color: #fff;
}

.navbar-brand {
  display: flex;
  flex-shrink: 0;
  justify-content: space-between;
  align-items: center;
  min-height: 3.25rem;
}

.navbar-burger {
  height: 1.5rem;
  width: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.navbar-burger span {
  width: 100%;
  height: 4px;
  border-radius: 10px;
  background-color: var(--zinc-900);
  display: block;
  transition: transform 86ms ease-in, opacity 50ms ease-out;
}

.is-active .line1 {
  transform: translateY(5px) rotate(45deg);
}

.is-active .line3 {
  transform: translateY(-9px) rotate(-45deg);
}

.is-active .line2 {
  opacity: 0;
}

.text-logo {
  font-weight: 750;
  font-size: 1.75rem;
  letter-spacing: -0.1em;
}

.navbar-menu {
  display: none;
  padding: 0.5rem 0;
  box-shadow: rgba(10, 10, 10, 0.1) 0px 8px 16px;
}

.navbar-menu.is-active {
  display: block;
  z-index: 12;
}

.navbar-item {
  display: block;
  padding: 0.5rem 0.75rem;
}

/* Hero Section Styling */
.hero {
  overflow: hidden;
  text-align: center;
}

.hero h1 {
  margin-bottom: 0.75rem;
}

.hero-image {
  width: 175px;
  height: auto;
  margin-bottom: 2rem;
}

.hero svg {
  margin-bottom: 2rem;
}

/* About Section Styling */
.content-wrapper.about {
  justify-content: space-between;
}

.about {
  text-align: center;
}

.party-image {
  transform: rotate(-10deg);
}

/* Contact Section Styling */
.content-wrapper.contact {
  min-height: min-content;
}

/* Personal Project Styling */
.work-grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 2rem;
  justify-content: center;
}

.work-image {
  width: 100%;
  object-fit: cover;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.work-description {
  padding: 0.75rem;
}

.work-header {
  margin-bottom: 0.75rem;
  display: flex;
  justify-content: space-between;
}

/* Contact Section Styling */
.contact {
  text-align: center;
}

.contact-text > p {
  margin-bottom: 0.75rem;
}

/* Skills Section Specific Styling */
.skill-grid {
  margin: 0 auto;
  width: 100%;
  max-width: 900px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 2rem;
  justify-content: center;
}

.skill-grid-item > h3 {
  margin-bottom: 1rem;
}

.skill-header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.75rem;
}

.skill-title {
  font-weight: 650;
}

.skills-bar,
.skills-percentage {
  height: 0.5rem;
  border-radius: 0.5rem;
}

.skills-bar {
  background-color: var(--violet-200);
  margin-bottom: 0.75rem;
}

.skills-percentage {
  display: block;
  background-image: linear-gradient(120deg, #2dd4bf 0%, #a78bfa 100%);
}

.skills-html {
  width: 75%;
}

.skills-css {
  width: 75%;
}

.skills-js {
  width: 45%;
}

.skills-ruby {
  width: 85%;
}

.skills-ror {
  width: 80%;
}

